--- a/contacto.html
+++ b/contacto.html
@@ -59,10 +59,10 @@
             </div>
             <div class="col-12 col-md-5 gap-4">
                 <div class="mapa row row-md-6">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.2504467899435!2d-67.99170828503114!3d-38.941106507155524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a30f9930fdafd%3A0xf92e083c35dedcef!2sPresbitero%20J.%20M.%20Brentana%20158%2C%20Cipolletti%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1676990891290!5m2!1ses-419!2sar" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="pt-2 pb-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.2504467899435!2d-67.99170828503114!3d-38.941106507155524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a30f9930fdafd%3A0xf92e083c35dedcef!2sPresbitero%20J.%20M.%20Brentana%20158%2C%20Cipolletti%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1676990891290!5m2!1ses-419!2sar" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <p>Brentana 158 - Cipolletti - Rio Negro</p>
                 </div>
-                <div class="redes row row-md-6">
+                <div class="redes row row-md-6 pt-3">
                     <ul class="redes">
                         <h4>Redes Sociales</h4>
                         <li>
