--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
             <div class="index-hijo">
             <h1>Realtà</h1>
     
-            <p>REALTÀ es un estudio de arquitectura e interiorismo dedicado a la proyección, el diseño y la dirección de obra, ubicado en la ciudad de Cipolletti. Surge como fusión entre la pasión por la arquitectura y el diseño de interiores, con el objetivo de acompañar a los clientes desde la primera idea hasta el proyecto hecho realidad. </p>
+            <p>REALTÀ es un estudio de arquitectura e interiorismo dedicado a la proyección, el diseño y la dirección de obra, ubicado en la ciudad de Cipolletti, en la provincia de Rio Negro. Surge como fusión entre la pasión por la arquitectura y el diseño de interiores, con el objetivo de facilitar la concreción de tus proyectos. </p>
             </div>
             </section>
 
         <section class="contenedor-padre">      
-        <p class="index-hijo">Es un estudio conformado por profesionales que intervienen en todas las etapas del proyecto, potenciando las ideas con el trabajo en equipo y las decisiones en conjunto</p>
+        <p class="index-hijo">Conformado por profesionales que intervienen en todas las etapas del proyecto, con trabajo en equipo y decisiones en conjunto, te permitirá visualizar tus ideas para luego materializarlas en obras, acompañandote a lo largo de todo el proceso, asesorandote para obtener el mejor resultado en el menor tiempo posible.</p>
         
         <img class="mediana" src="./images/inicio01.jpg">
         </section>    
