--- a/servicios.html
+++ b/servicios.html
@@ -38,27 +38,27 @@
             <div class="card text-center col-12 col-md-5 col-lg-3 justify-content-md-center">
                 <img class="servicios mx-auto d-block" src="./images/serv-asesoramiento.jpg">
                 <h2>Asesoramiento</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
+                <p>Te orientamos a partir de tu idea o tu boceto, desde el punto de vista profesional, para que puedas llegar a un proyecto funcional y de calidad.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
                 <img class="servicios mx-auto d-block" src="./images/serv-proyecto.jpg">
                 <h2>Proyecto</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
+                <p>Realizamos toda la documentación que requiere un anteproyecto y un proyecto ejecutivo, dejando todo listo para su posterior ejecución.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
                 <img class="servicios mx-auto d-block" src="./images/serv-direccion.jpg">
                 <h2>Dirección</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
+                <p>Garantizamos resultados en tiempo y forma para todos los proyectos, con el seguimiento correspondiente y los requerimientos de cada obra.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
                 <img class="servicios mx-auto d-block" src="./images/serv-interiorismo.jpeg">
                 <h2>Interiorismo</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
+                <p>Pensamos cada detalle para que el diseño interior sea parte de la obra en su totalidad. En caso de remodelaciones, buscamos la mejor forma de potenciar el espacio ya existente.</p>
             </div>
             <div class="card text-center col-12 col-md-5 col-lg-3">
                 <img class="servicios mx-auto d-block" src="./images/serv-renders.jpeg">
                 <h2>Renders</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero error beatae minima, voluptates consequuntur expedita numquam consequatur quasi ab deserunt.</p>
+                <p>Materializamos tus ideas en 3D, para que puedas previsualizar las mismas, entender en escala el espacio que vas a habitar, y asi poder elegir la mejor opcion para tu proyecto.</p>
             </div>
         </section>
     </main>
